--- a/_posts/2019-07-04-the-us-narrative-today.html
+++ b/_posts/2019-07-04-the-us-narrative-today.html
@@ -2673,5 +2673,108 @@ stories:
   state: Arizona
   domain: http://www.yumasun.com/
   link: https://www.yumasun.com/sports/national_sports/tomic-fined-for-not-meeting-professional-standards-in-loss/article_5c5e1e25-22b4-5335-8f00-ec9b60ba03eb.html
+images:
+- name: nyc-flag-nycflag-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-neo-instinct.jpg
+- name: san-francisco-street-view-san-francisco-street-view-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-propaganda-leaflets.jpg
+- name: oldhouse-granaryfield-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-creativity.jpg
+- name: nazi-invasion-P6210065.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-P6210065.jpg
+- name: cargo-ship-cargo-ship-on-sea-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-neo-instinct.jpg
+- name: legal-statue-legalstatue-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-satan-red.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-yellow-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-yellow-paper.JPG
+- name: old-door-lock-old-door-lock-2-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-free-woman.jpg
+- name: walled-garden-walled-garden-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-internet-numbers.jpg
+- name: server-cloud-server-racks-clouds-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-china-prop.jpg
+- name: sand-hand-sand-hand-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-space-pizza.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-green-zuma.jpg
+- name: carry-load-carryload-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-pablo-blue.jpg
+- name: castle-wall-DSC-0067-post-modern.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-post-modern.JPG
+- name: fence-fence-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-blue-electricity.jpg
+- name: server-cloud-server-racks-door-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-light-dali.jpg
+- name: gypsymosaic-gypsy-eyes-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-space-pizza.jpg
+- name: abandonedbuildings_smoking_cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_smoking_cigarette.jpg
+- name: nyc-flag-nycflag-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-pablo-blue.jpg
+- name: server-cloud-server-racks-clouds-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dali-two.jpg
+- name: aws-s3-square-machine-road-light-dali-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-machine-road-light-dali-square.jpg
+- name: containership-bw-storytelling.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-bw-storytelling.png
+- name: supreme-court-supremecourt-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-satan-red.jpg
+- name: machine-road-machine-road-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-copper-circuit-2.jpg
+- name: fence-mexico-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-colored-circuits.jpg
+- name: paris-paris-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-kandinsky-bv.jpg
+- name: white-house-lawn-white-house-lawn-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-spagetti-accident.jpg
+- name: downtown-trucksilo-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-cinnamon-rolls.jpg
+- name: aws-s3-stories-fredericksburg-downtown-flag.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-fredericksburg-downtown-flag.jpg
+- name: wall-cannon-wall-cannon-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wall-cannon-wall-cannon-blue-circuit.jpg
+- name: school-clouds-church-clouds-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-umberto-bocc.jpg
+- name: server-cloud-server-racks-door-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-blue-electricity.jpg
+- name: old-door-lock-old-door-lock-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-blue-electricity.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-smooth-ride.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-smooth-ride.JPG
+- name: liberty-back-statue-liberty-back-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-yellow-paper.jpg
+- name: meadowbutterfly-meadow-butterfly-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-purple-pond.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-smoking-cigarette.jpg
+- name: machine-road-machine-road-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-dali-two.jpg
+- name: gypsy-wagon-gypsywagon-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-dry-skin.jpg
+- name: aws-s3-stories-new-art-museum-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-art-museum-light-dali.jpg
+- name: containership-containership-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-ww2-dresden.jpg
+- name: oldcabin-store-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-dark-dali.jpg
+- name: san-francisco-street-view-san-francisco-street-view-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-dark-soul.jpg
+- name: castle-wall-DSC-0067-nazi-poster.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-nazi-poster.JPG
+- name: flower-barbed-wire-flower-barbed-wire-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-yellow-paper.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-feed-people.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-feed-people.png
+- name: downtheline-downtheline-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-umberto-bocc.jpg
+- name: rain-princess-IMG_6436.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_6436.jpg
+- name: hollywood-building-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-jap-wav-pr.jpg
+- name: catacombs-catacombs-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-neo-instinct.jpg
+- name: old-granary-field-granaryfield-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-spagetti-accident.jpg
 ---
 Work Begins To Update Hazard Mitigation Plan.&nbsp;Judge Rules State Legislators Violated Illinois Constitution By Voting To Freeze Their Pay.&nbsp;Pharrell Surprises Graduating Class With Internships.&nbsp;Dalton Harris, Catawba Resident.&nbsp;Got A Tokyo Olympics Ticket? Unrivaled Demand Causes Turmoil.&nbsp;Federal Drug And Weapons Bust.&nbsp;Costco Quietly Becomes A Destination For Clothes.&nbsp;Washington's Fourth Of July To Come With A Twist From Trump.&nbsp;
